--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.idea
+/.cache
 node_modules
+.env
+
 dist
 dist-ssr
 *.local
@@ -15,7 +19,6 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
 .DS_Store
 *.suo
 *.ntvs*
