--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "railroads",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "types": "tsc --noEmit"
   },
   "devDependencies": {
+    "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
