--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "types": "tsc --noEmit"
+    "types": "tsc --noEmit",
+    "lint": "eslint --ext .ts,.tsx src",
+    "lint:fix": "eslint --fix --ext .ts,.tsx src"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "eslint": "^8.43.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "sass": "^1.57.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "typescript": "^5.1.3",
+    "vite": "^4.0.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
