--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
   },
   "rules": {
     "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/triple-slash-reference": "off",
+    "no-new": "off"
   }
 }
