--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dnpev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "types": "tsc --noEmit",
@@ -14,13 +14,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "eslint": "^8.43.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "sass": "^1.57.1",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-promise": "^7.1.0",
+    "sass": "^1.79.3",
+    "typescript": "^5.6.2",
+    "vite": "^5.7.1",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
