--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "railroads",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dnpev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "types": "tsc --noEmit",
-    "lint": "eslint --ext .ts,.tsx src",
-    "lint:fix": "eslint --fix --ext .ts,.tsx src"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "eslint": "^8.43.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-n": "^17.10.3",
-    "eslint-plugin-promise": "^7.1.0",
-    "sass": "^1.79.3",
-    "typescript": "^5.6.2",
-    "vite": "^5.7.1",
-    "vite-plugin-eslint": "^1.8.1"
-  }
+	"name": "vitelatest",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"sass-embedded": "^1.79.3",
+		"typescript": "^5.5.3",
+		"vite": "^5.4.1"
+	},
+	"dependencies": {
+		"@biomejs/biome": "^1.9.2",
+		"vite-plugin-biome": "^1.0.12"
+	}
 }
